<resources>
    <string name="app_nom">CliAndCollect</string>

    <string name="connexion">Connexion</string>
    <string name="mail">Adresse email</string>
    <string name="mdp">Mot de passe</string>
    <string name="adresse">Adresse </string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="indication_nom">Entrez votre nom</string>
    <string name="indication_prenom">Entrez votre prénom</string>
    <string name="indication_email">Entrez votre adresse email</string>
    <string name="indication_mdp">Entrez votre mot de passe</string>
    <string name="indication_adresse">Adresse non renseignée ></string>
    <string name="se_souvenir">Se souvenir de moi</string>
    <string name="erreur_mail_non_renseigne">Adresse email non renseignée</string>
    <string name="erreur_mdp_non_renseigne">Mot de passe non renseigné</string>
    <string name="erreur_reseau">Aucune connexion internet détectée</string>
    <string name="api_injoignable">L\'API n\'est pas joignable, veuillez réessayer plus tard</string>

    <string name="inscription">Inscription</string>
    <string name="adresse_non_trouvee">Adresse introuvable, veuillez vérifier l\'entrée</string>
    <string name="adresse_hors_france">L\'adresse renseignée est introuvable en France</string>
    <string name="titre_choix_adresse">Choisissez votre adresse</string>
    <string name="attente_reseau">Vérification en cours du réseau ...</string>
    <string name="attente_connexion">Connexion en cours ...</string>
    <string name="attente_inscription">Inscription en cours ...</string>
    <string name="chargement_demarrage_parcours">Initialisation du parcours en cours ...</string>
    <string name="chargement_ajout">Ajout(s) en cours ...</string>
    <string name="chargement_modification">Modification(s) en cours ...</string>
    <string name="chargement_suppression">Suppression en cours ...</string>
    <string name="inscription_reussie">Inscription réussie, bienvenue !</string>
    <string name="menu_deconnecter">Se déconnecter</string>
    <string name="menu_compte">Gérer mon compte</string>
    <string name="erreur_inconnue">Une erreur inconnue est survenue, veuillez réessayer</string>
    <string name="erreur_inscription">Erreur lors de l\'inscription, veuillez réessayer plus tard</string>
    <string name="modifier_compte">Modifier ses données personnelles</string>
    <string name="erreur_modification_compte">Erreur lors de la modification de vos données, veuillez réessayer plus tard</string>

    <string name="valider">Valider</string>
    <string name="retour">Retour</string>

    <string name="ajouter_client">Ajouter un client / prospect</string>
    <string name="detail_client">Détails du client / prospect</string>
    <string name="nom_entreprise">Nom de l\'entreprise</string>
    <string name="nom_entreprise_liste">Nom de l\'entreprise :</string>
    <string name="erreur_nom_entreprise_non_renseigne">Nom de l\'entreprise non renseigné</string>
    <string name="adresse_entreprise">Adresse de l\'entreprise</string>
    <string name="adresse_entreprise_liste">Adresse de l\'entreprise :</string>
    <string name="description">Description</string>
    <string name="nom_contact">Nom du contact</string>
    <string name="prenom_contact">Prénom du contact</string>
    <string name="tel_contact">Numéro de téléphone</string>
    <string name="obtenir_coordonnees">Obtenir votre adresse</string>
    <string name="coordonnees_non_calculees">Veuillez d\'abord obtenir vos coordonnées</string>
    <string name="indication_entreprise">Entrez le nom de l\'entreprise</string>
    <string name="indication_prenom_contact">Entrez le prénom de votre contact</string>
    <string name="indication_nom_contact">Entrez le nom de votre contact</string>
    <string name="indication_description">Renseignez une description (optionnel)</string>
    <string name="indication_telephone">Ex. : +33612345678</string>
    <string name="client">Client</string>
    <string name="prospect">Prospect</string>
    <string name="info_modif_nom_entreprise">Ce client / prospect est présent dans un itinéraire, ce dernier sera mis à jour en conséquence</string>
    <string name="changement_adresse">Changement d\'adresse</string>
    <string name="adresse_confirmation_modification">L\'adresse de ce client / prospect figure dans un itinéraire. Changer l\'adresse supprimera cet itinéraire.\nVoulez-vous continuer ?</string>
    <string name="pasModifie">Aucune information n\'a été modifiée</string>
    <string name="erreur_aucun_client">Aucun client ou prospect n\'a été ajouté</string>
    <string name="erreur_creation_client">Erreur lors de la création d\'un client \/ prospect, veuillez réessayer plus tard</string>
    <string name="erreur_modification_client">Erreur lors de l\'édition d\'un client \/ prospect, veuillez réessayer plus tard</string>
    <string name="erreur_recuperation_clients">Aucune connexion internet, impossible de récupérer les clients</string>
    <string name="erreur_recuperation_parcours">Aucune connexion internet, impossible de récupérer les parcours</string>
    <string name="erreur_recuperation_compte">Impossible de récupérer vos informations, réessayez plus tard</string>

    <string name="adresseClient">Adresse :</string>
    <string name="nom_itineraire">Nom de l\'itinéraire :</string>
    <string name="liste_clients_itineraire">Client(s) / prospect(s) à ajouter :</string>
    <string name="etapes_itineraire">Étapes de l\'itinéraire :</string>
    <string name="depart_itineraire">Départ et arrivée de l\'itinéraire : domicile</string>
    <string name="pasModifier">Aucune information n\'a été modifiée</string>
    <string name="ajouter_itineraire">Ajouter un itinéraire</string>
    <string name="contact_a_ajouter">Entrez le nom de l\'entreprise du contact</string>
    <string name="indication_nom_itineraire">Entrez le nom de l\'itinéraire</string>
    <string name="indication_clients_itineraire">Sélectionnez les clients à visiter</string>
    <string name="indication_contaxt_a_ajouter">Entrez le nom de l\'entreprise du contact</string>
    <string name="ajout_contact_itineraire">Ajouter le contact</string>
    <string name="chargement_calcul_itineraire">Calcul de l\'itinéraire en cours ...</string>
    <string name="erreur_aucun_itineraire">Aucun itinéraire n\'a été ajouté</string>
    <string name="erreur_nom_itineraire_existant">Le nom d\'itinéraire renseigné est déjà pris</string>
    <string name="erreur_affichage_carte">Erreur lors de l\'affichage de la carte, veuillez réessayer dans quelques instants</string>
    <string name="erreur_creation_itineraire">Erreur lors de la création d\'un itinéraire, veuillez réessayer plus tard</string>
    <string name="erreur_modification_itineraire">Erreur lors de l\'édition d\'un itinéraire, veuillez réessayer plus tard</string>
    <string name="erreur_recuperation_itineraires">Aucune connexion internet, impossible de récupérer les itinéraires</string>

    <string name="marqueur_confirmation">Oui</string>
    <string name="marqueur_annulation">Non</string>
    <string name="marqueur_message">Voulez-vous vraiment supprimer ce marqueur ?</string>
    <string name="marqueur_titre">Supprimer le marqueur</string>
    <string name="recherche_adresse_aucun_resultat">Aucun résultat trouvé, vérifiez la saisie et réessayez</string>
    <string name="recherche_adresse_erreur">Erreur lors de la recherche de l\'adresse</string>
    <string name="recherche_adresse_placeholder">Rechercher un lieu</string>
    <string name="detail_itineraire">Détails de l\'itinéraire</string>
    <string name="erreur_nom_itineraire_non_renseigne">Nom de l\'itinéraire non renseigné</string>
    <string name="erreur_ajout_client_vide">Ajoutez au moins 1 client / prospect</string>
    <string name="nombre_etape_depasse">Vous ne pouvez pas ajouter plus de 8 clients à votre itinéraire</string>

    <string name="supprimer_client">Supprimer un client / prospect</string>
    <string name="confirmation_suppression_client">Êtes-vous sûr de vouloir supprimer ce client / prospect ?</string>
    <string name="confirmation_suppression_itineraire_avec_client">Ce client / prospect figure dans un itinéraire. Si vous le supprimez, l\'itinéraire associé sera également supprimé.\nVoulez-vous continuer ?</string>

    <string name="supprimer_itineraire">Supprimer un itinéraire</string>
    <string name="confirmation_suppression_itineraire">"Êtes-vous sûr de vouloir supprimer cet itinéraire ?"</string>

    <string name="parcours_en_cours">Liste parcours en cours (%d) :</string>
    <string name="parcours_en_pause">Liste parcours en pause (%d) :</string>
    <string name="parcours_arretes">Liste parcours arrêtés (%d) :</string>
    <string name="parcours_termines">Liste parcours terminés (%d) :</string>
    <string name="creation_parcours">Démarrer un parcours</string>
    <string name="dernier_client">"Dernier client visité : "</string>
    <string name="dernier_prospect">"Dernier prospect visité : "</string>
    <string name="prochain_client">"Prochain client : "</string>
    <string name="prochain_prospect">"Prochain prospect : "</string>
    <string name="erreur_aucun_parcours">Aucun parcours n\'est en cours</string>
    <string name="aucune_visite_effectuee">Aucun contact visité au cours de ce parcours</string>
    <string name="parcours_termine">Vous avez terminé le parcours</string>
    <string name="clic_long_pour_action">Effectuez un clic long pour faire cette action</string>
    <string name="erreur_parcours_pas_en_cours">Ce parcours est annulé ou terminé, cette action est impossible</string>
    <string name="parcours_supprime">Parcours supprimé avec succès</string>
    <string name="supprimer_parcours">Supprimer un parcours</string>
    <string name="confirmation_suppression_parcours">"Êtes-vous sûr de vouloir supprimer ce parcours ?"</string>
    <string name="erreur_parcours_sans_itineraire">L\'itinéraire associé a ce parcours a été supprimé, impossible d\'afficher le parcours</string>
    <string name="permission_localisation_refusee">Votre localisation est nécessaire pour afficher votre parcours</string>
</resources>