<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewAjoutClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajouter_client"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/formulaireAjoutClient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/textViewAjoutClient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nom_entreprise"/>

            <EditText
                android:id="@+id/nomEntreprise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/indication_entreprise" />

            <TextView
                android:id="@+id/messageErreurNomEntreprise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adresse_entreprise" />

            <EditText
                android:id="@+id/adresseEntreprise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/indication_adresse" />

            <TextView
                android:id="@+id/messageErreurAdresse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:layout_height="wrap_content"
                android:hint="@string/indication_description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tel_contact" />

            <EditText
                android:id="@+id/telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/indication_telephone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prenom_contact" />

            <EditText
                android:id="@+id/prenomContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/indication_prenom_contact" />

            <TextView
                android:id="@+id/messageErreurPrenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <Button
                android:id="@+id/obtenirCoordonnees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="obtenirCoordonnees"
                android:text="@string/obtenir_coordonnees" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nom_contact" />

            <EditText
                android:id="@+id/nomContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/indication_nom_contact" />

            <TextView
                android:id="@+id/messageErreurNom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />



            <RadioGroup
                android:layout_width="match_parent"
                android:id="@+id/clientProspect"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/client"
                    android:layout_width="wrap_content"
                    android:text="@string/client"
                    android:checked="true"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/prospect"
                    android:layout_width="wrap_content"
                    android:text="@string/prospect"
                    android:layout_height="wrap_content"/>
            </RadioGroup>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/erreurFormulaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/formulaireAjoutClient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/erreurFormulaire"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/boutonValider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="valider"
            android:text="@string/valider" />
        <Button
            android:id="@+id/boutonRetour"
            android:layout_width="wrap_content"
            android:onClick="retour"
            android:layout_height="wrap_content"
            android:text="@string/retour" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>