<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/entete_page_composant" />

    <LinearLayout
        style="@style/AppStyle"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp">

            <TextView
                android:id="@+id/labelMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/saisieMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/indication_email"
                android:maxLines="1"
                android:inputType="textEmailAddress" />

        </TableLayout>

        <TableLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp">

            <TextView
                android:id="@+id/labelMdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/mdp"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/saisieMdp"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/indication_mdp"
                android:maxLines="1"
                android:inputType="textPassword" />

        </TableLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp">

            <CheckBox
                android:id="@+id/seRappelerDeMoi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/labelRememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/se_souvenir" />

        </LinearLayout>

        <Button
            android:id="@+id/boutonConnexion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/connexion"
            android:textSize="25sp" />

        <Button
            android:id="@+id/boutonInscription"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/inscription"
            android:textSize="25sp"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</LinearLayout>
