<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewDetailClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_client"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/formulaireDetailClient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/textViewDetailClient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entreprise"/>

            <EditText
                android:id="@+id/saisieNom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adresse_client" />

            <EditText
                android:id="@+id/saisieAdresse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <EditText
                android:id="@+id/Description"
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coordonnees" />

            <TextView
                android:id="@+id/coordonnees"
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prenom_contact" />

            <EditText
                android:id="@+id/prenomContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nom_contact" />

            <EditText
                android:id="@+id/nomContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tel_contact" />

            <EditText
                android:id="@+id/telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:id="@+id/ClientProspect"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/client"
                    android:layout_width="wrap_content"
                    android:text="@string/client"
                    android:checked="true"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/propspect"
                    android:layout_width="wrap_content"
                    android:text="@string/prospect"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/formulaireDetailClient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">
        <Button
            android:id="@+id/boutonRetour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="304dp"
            android:text="@string/retour" />
        <Button
            android:id="@+id/obtenirCoordonnees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="obtenirCoordonnees"
            android:layout_marginBottom="304dp"
            android:text="@string/obtenir_coordonnees" />
        <Button
            android:id="@+id/boutonModifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="304dp"
            android:text="@string/valider" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>